--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -33,7 +33,7 @@
     }
   }
 }
-@media screen and (max-width: 860px) and (prefers-color-scheme: dark) {
+@media screen and (max-width: 860px){
   .header {
     border-radius: 0%;
     background: linear-gradient(
@@ -420,7 +420,7 @@
     }
   }
 }
-@media screen and (max-width: 860px) and (prefers-color-scheme: dark) {
+@media screen and (max-width: 860px){
   .header {
     &__inner {
       // position: fixed;
@@ -489,744 +489,4 @@
       line-height: 20px;
     }
   }
-}
-
-
-@media (prefers-color-scheme: dark){
-  .header {
-    height: 650px;
-    border-bottom-left-radius: 50% 90px;
-    border-bottom-right-radius: 50% 90px;
-    overflow: hidden;
-    &__inner {
-      height: inherit;
-    }
-    &__top {
-      padding-top: 17px;
-      height: 79px;
-      background-color: transparent;
-      transition: background-color 0.4s;
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 9999;
-      &-wrapper {
-        display: flex;
-        align-items: center;
-      }
-      &.sticky {
-        background-color: $orange--10;
-      }
-    }
-    &-logo {
-      width: 188px;
-      &__link {
-        display: block;
-      }
-    }
-    &-nav {
-      width: calc(100% - 188px - 160px);
-      padding-left: 60px;
-      &__list {
-        display: flex;
-        justify-content: space-between;
-      }
-      &__item {
-        font-weight: bold;
-        line-height: 22px;
-      }
-      &__link {
-        color: $black;
-      }
-    }
-    &-language {
-      width: 160px;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      font-weight: bold;
-      position: relative;
-      &__popup {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 81px;
-        height: 36px;
-        border: 2px solid $black;
-        filter: drop-shadow(0px 12px 24px rgba(96, 90, 196, 0.15));
-        border-radius: 50px;
-        cursor: pointer;
-        &.active {
-          .header-language__arrow {
-            transform: rotate(0deg);
-          }
-        }
-      }
-      &__arrow {
-        width: 15px;
-        height: 9px;
-        margin: 0 0 5px 4px;
-        transform: rotate(180deg);
-        background: url("../../images/header/arrow.svg") no-repeat center center /
-          cover;
-      }
-      .menu-language {
-        &.active {
-          display: block;
-        }
-        display: none;
-        position: absolute;
-        top: 53px;
-        width: 160px;
-        height: 141px;
-        background-color: $white;
-        box-shadow: 0px 12px 24px rgba(96, 90, 196, 0.15);
-        border-radius: 9px;
-        z-index: 999;
-        &__list {
-          text-align: end;
-          overflow: hidden;
-          padding: 14px 0;
-        }
-        &__link {
-          display: block;
-          cursor: url("../../images/cursor.png"), auto;
-          color: $black;
-        }
-        &__item {
-          padding: 6px 32px 6px 0;
-          font-weight: normal;
-          &:hover {
-            background-color: $white--hover;
-          }
-        }
-      }
-    }
-    &__bottom {
-      max-width: 1000px;
-      margin-top: 154px;
-      display: flex;
-      justify-content: space-between;
-    }
-    &__heading {
-      padding-top: 100px;
-      max-width: 550px;
-    }
-    &__buttons {
-      max-width: 380px;
-      margin-top: 60px;
-      display: flex;
-      justify-content: space-between;
-    }
-    .appstore__image,
-    .google__image {
-      width: 180px;
-      height: 52px;
-    }
-    .appstore__image {
-      background: url("../../images/header/appstore.png") no-repeat center center /
-        cover;
-    }
-    .google__image {
-      background: url("../../images/header/google.png") no-repeat center center /
-        cover;
-    }
-    &__title {
-      font-size: 44px;
-      line-height: 52px;
-    }
-    &__text {
-      margin-top: 45px;
-      font-size: 24px;
-      line-height: 30px;
-      font-weight: bold;
-    }
-    .phone-header {
-      height: 520px;
-      position: relative;
-      &__mark {
-        position: absolute;
-  
-        &:nth-child(1) {
-          top: 106px;
-          right: 168px;
-          z-index: 1;
-  
-        }
-        &:nth-child(2) {
-          top: 240px;
-          right: 88px;
-          z-index: 1;
-        }
-        &:nth-child(3) {
-          top: 77px;
-          right: 13px;
-          z-index: 2;
-        }
-        &:nth-child(4) {
-          right: 0;
-          top: 233px;
-          z-index: 2;
-        }
-      }
-      .phone__wrapper{
-        position: relative;
-        &::after{
-          position: absolute;
-          content:'';
-          width: 100%;
-          height: 200px;
-          bottom: 0;
-          background: linear-gradient(0deg, $orange--gradient -10.87%, rgba(254, 218, 70, 0) 61.88%);
-        }
-      }
-    }
-  }
-  .features {
-    background-color: $grey;
-    position: relative;
-    &__inner {
-      padding: 95px 0 130px 0;
-    }
-    &__heading {
-      max-width: 604px;
-      text-align: center;
-      margin: 0 auto;
-    }
-    &__title {
-      font-size: 36px;
-      line-height: 43px;
-    }
-    &__body {
-      margin-top: 90px;
-    }
-    &__list {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 255px));
-      justify-content: center;
-      row-gap: 72px;
-      column-gap: 30px;
-    }
-    &__item {
-      display: flex;
-      align-items: flex-start;
-    }
-    &__text {
-      margin-left: 27px;
-      font-size: 16px;
-      line-height: 22px;
-    }
-    &::after{
-      position: absolute;
-      display: block;
-      content: '';
-      width: 353px;
-      height: 344px;
-      background: url('../../images/features/lines.png') no-repeat center center;
-      right: 0;
-      bottom: -172px;
-      z-index: 99;
-    }
-  }
-  .how {
-    background: url("../../images/how/pattern.png") no-repeat center center /
-      cover;
-    position: relative;
-    &__inner {
-      padding: 60px 0 100px 0;
-    }
-    &__heading {
-      text-align: center;
-    }
-    &__title {
-      color: $white;
-    }
-    .registration-how {
-      margin-top: 70px;
-      background: url("../../images/how/bg.png") no-repeat 50% 7%;
-      &__heading {
-        text-align: center;
-        font-size: 18px;
-        line-height: 24px;
-      }
-  
-      &__title {
-        color: $white;
-      }
-    }
-    .body-how {
-      display: flex;
-      flex-direction: column;
-      max-width: 964px;
-      margin: 0 auto;
-      .top-how {
-        display: flex;
-        justify-content: space-between;
-        &__buy,
-        &__sell {
-          width: 296px;
-          min-height: 628px;
-          display: flex;
-          flex-direction: column;
-          justify-content: flex-end;
-        }
-        &__phone {
-          margin-top: 40px;
-        }
-        &__list {
-          margin-top: 20px;
-        }
-        &__item {
-          padding: 15px;
-          background-color: $white;
-          box-shadow: 0px 12px 24px rgba(96, 90, 196, 0.15);
-          border-radius: 12px;
-          transition: 0.3s padding 0s;
-          margin-top: 18px;
-          &:hover {
-            filter: drop-shadow(0px 8px 16px rgba(72, 66, 163, 0.35));
-            cursor: url("../../images/cursor.png"), auto;
-          }
-        }
-        &__popup {
-          &.active{
-            display: block;
-          }
-          display: none;
-          position: absolute;
-          background: rgba(0, 0, 0, 0.7);
-          top: 0;
-          left: 0;
-          width: 100vw;
-          height: 100%;
-          z-index: 99999999999;
-        }
-        &__phone-popup {
-          width: 404px;
-          height: 749px;
-          background-color: white;
-          border-radius: 24px;
-          margin: 0 auto;
-          position: absolute;
-          top: calc(50% - 374px);
-          left: calc(50% - 202px);
-          padding: 18px 21px 63px 23px;
-          .phone {
-            position: relative;
-            &-close {
-              position: absolute;
-              cursor: pointer;
-              content: "";
-              display: flex;
-              justify-content: space-between;
-              align-items: center;
-              width: 90px;
-              height: 18px;
-              top: -40px;
-              right: 0;
-              &__text {
-                font-size: 16px;
-                line-height: 18px;
-                color: $white;
-              }
-              &__button {
-                width: 15px;
-                height: 15px;
-                position: relative;
-              }
-              &__line {
-                width: 21.14px;
-                height: 1.5px;
-                position: absolute;
-                background-color: $white;
-                top: calc(50% - .7px);
-                &:nth-child(1){
-                  transform: rotate(45deg);
-                }
-                &:nth-child(2){
-                  transform: rotate(-45deg);
-                }
-              }
-            }
-            &-lines {
-              width: 68px;
-              margin: 0 auto;
-              display: flex;
-              justify-content: space-between;
-              &__circle {
-                width: 9px;
-              }
-              &__line {
-                width: 51px;
-              }
-              &__circle,
-              &__line {
-                height: 9px;
-                border-radius: 12px;
-                background: rgba(126, 119, 241, 0.5);
-              }
-            }
-            &-popup {
-              &__image {
-                margin: 17px auto 0 auto;
-              }
-            }
-            &__title{
-              display: block;
-              text-align: center;
-              margin-top: 19px;
-            }
-          }
-        }
-        &__title {
-          color: $white;
-          text-align: center;
-        }
-        &__text {
-          margin-top: 5px;
-          font-size: 14px;
-          line-height: 18px;
-        }
-        &__image {
-          margin: 0 auto;
-        }
-      }
-      .bottom-how {
-        max-width: 296px;
-        margin: 0 auto;
-        &__wrapper {
-          text-align: center;
-        }
-        &__item {
-          padding: 15px;
-          background-color: $white;
-          box-shadow: 0px 12px 24px rgba(96, 90, 196, 0.15);
-          border-radius: 12px;
-          transition: 0.3s padding 0s;
-  
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          &:last-child {
-            margin-top: 30px;
-          }
-          &:hover {
-            filter: drop-shadow(0px 8px 16px rgba(72, 66, 163, 0.35));
-            cursor: url("../../images/cursor.png"), auto;
-          }
-        }
-        [data-popup-7] {
-          .top-how__phone-popup {
-            top: 38%;
-          }
-        }
-        &__title {
-          color: $white;
-          text-align: center;
-        }
-        &__text {
-          margin-top: 5px;
-          font-size: 14px;
-          line-height: 18px;
-        }
-        &__image {
-          margin: 0 auto;
-        }
-        .social-how {
-          display: flex;
-          width: 100%;
-          justify-content: space-between;
-          background: rgba(55, 71, 79, 0.1);
-          border-radius: 9px;
-          padding: 16px;
-        }
-      }
-      &__list {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      &__title {
-        color: $white;
-      }
-    }
-    &::after {
-      position: absolute;
-      display: block;
-      content: "";
-      left: -18px;
-      bottom: -372px;
-      width: 487px;
-      height: 492px;
-      background: url("../../images/how/dots.png");
-    }
-  }
-  .subscribe {
-    padding: 83px 0 155px 0;
-  
-    &__title {
-      text-align: center;
-    }
-    &-notification {
-      background-color: $purple;
-      max-width: 572px;
-      padding: 22px 40px 22px 21px;
-      margin: 43px auto 0 auto;
-      box-shadow: 0px 12px 24px rgba(96, 90, 196, 0.15);
-      border-radius: 12px;
-      color: $white;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      &__text {
-        margin-left: 12px;
-      }
-    }
-    &__body {
-      margin-top: 48px;
-    }
-    &__text {
-      text-align: center;
-    }
-    &__list {
-      margin-top: 68px !important;
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(258px, 350px));
-      justify-content: center;
-      grid-gap: 30px;
-      
-    }
-    &__item {
-      box-shadow: 0px 12px 24px rgba(96, 90, 196, 0.15);
-      border-radius: 12px;
-      padding: 34px 49px 47px 49px;
-      &:nth-child(1) {
-        background-color: $white;
-      }
-      &:nth-child(2) {
-        background: linear-gradient(
-            0deg,
-            #ffb341 1.7%,
-            #fdc643 49.16%,
-            #fbd745 91.87%
-          ),
-          #fbd745;
-      }
-      &:nth-child(3) {
-        background: linear-gradient(0deg, #7f78f0 0%, #6059cf 75.85%), #7e77f1;
-      }
-    }
-    &-item {
-      &__title {
-        text-align: center;
-      }
-      &__list {
-        margin-top: 60px !important;
-        min-height: 108px;
-      }
-      &__point {
-        position: relative;
-        &::before {
-          position: absolute;
-          content: "";
-          width: 8px;
-          height: 8px;
-          border-radius: 50%;
-          top: 8px;
-          left: -20px;
-          background-color: $purple;
-        }
-      }
-      &:nth-child(3) .subscribe-item__point {
-        &::before {
-          background-color: $orange;
-        }
-      }
-      &__link {
-        border-radius: 50px;
-        padding: 9px 0;
-        width: 100%;
-        display: block;
-      }
-      #subscribe__link1 {
-        color: $purple !important;
-        border: 2px solid $purple;
-      }
-      #subscribe__link2 {
-        color: $black !important;
-        border: 2px solid $black;
-      }
-      #subscribe__link3 {
-        color: $white !important;
-        border: 2px solid $white;
-      }
-      &__more {
-        text-align: center;
-        box-sizing: border-box;
-        filter: drop-shadow(0px 12px 24px rgba(96, 90, 196, 0.15));
-        margin-top: 32px;
-      }
-    }
-  }
-  .partners {
-    padding: 72px 0 280px 0;
-    background-color: $white;
-    &__heading {
-      text-align: center;
-    }
-    &__title {
-      font-size: 36px;
-      line-height: 43px;
-    }
-    &__item {
-      max-width: 263px;
-      margin-left: 80px;
-    }
-    &__slider {
-      margin-top: 102px;
-    }
-    .slick-dots {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 67px;
-      li {
-        width: 6px;
-        height: 6px;
-        border-radius: 50%;
-        background-color: $purple;
-      }
-      li + li {
-        margin-left: 15px;
-      }
-      .slick-active {
-        width: 12px;
-        height: 12px;
-      }
-    }
-    .slick-dots li button {
-      text-indent: -9999px;
-      overflow: hidden;
-      border: none;
-  
-      padding: 0;
-    }
-  }
-  .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100vw;
-    background: linear-gradient(
-        180deg,
-        #ffb341 -41.15%,
-        #fdc643 16.04%,
-        #fbd745 67.51%
-      ),
-      #fbd745;
-    border-top-left-radius: 50% 37px;
-    border-top-right-radius: 50% 37px;
-    &__body {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    &__left {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 683px;
-      width: 100%;
-    }
-    &__wrapper {
-      max-width: 452px;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      a {
-        color: $black;
-        text-decoration: underline;
-        font-size: 16px;
-        line-height: 19px;
-        font-weight: bold;
-      }
-    }
-    &__right {
-      display: flex;
-      align-items: center;
-    }
-    &__list {
-      display: flex;
-      align-items: center;
-    }
-    &__item:last-child{
-      margin-left: 14px;
-    }
-    &__link {
-      display: block;
-    }
-    &-language {
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      font-weight: bold;
-      position: relative;
-      margin-left: 14px;
-      &__popup {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 81px;
-        height: 44px;
-        border: 2px solid $black;
-        filter: drop-shadow(0px 12px 24px rgba(96, 90, 196, 0.15));
-        border-radius: 50px;
-        cursor: pointer;
-        &.active {
-          .footer-language__arrow {
-            transform: rotate(0deg);
-          }
-        }
-      }
-      &__arrow {
-        width: 15px;
-        height: 9px;
-        margin: 0 0 5px 4px;
-        transform: rotate(180deg);
-        background: url("../../images/header/arrow.svg") no-repeat center center /
-          cover;
-      }
-      .footer-language {
-        &.active {
-          display: block;
-        }
-        display: none;
-        position: absolute;
-        top: -160px;
-        width: 160px;
-        height: 141px;
-        background-color: $white;
-        box-shadow: 0px 12px 24px rgba(96, 90, 196, 0.15);
-        border-radius: 9px;
-        z-index: 999;
-        &__list {
-          text-align: end;
-          overflow: hidden;
-          padding: 14px 0;
-        }
-        &__link {
-          display: block;
-          cursor: url("../../images/cursor.png"), auto;
-          color: $black;
-        }
-        &__item {
-          padding: 6px 32px 6px 0;
-          font-weight: normal;
-          &:hover {
-            background-color: $white--hover;
-          }
-        }
-      }
-    }
-  }
-  
 }
