--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -33,7 +33,7 @@
     }
   }
 }
-@media screen and (max-width: 860px){
+@media screen and (max-width: 860px) {
   .header {
     border-radius: 0%;
     background: linear-gradient(
@@ -43,6 +43,7 @@
         #fbd745 67.51%
       ),
       #fbd745 !important;
+    height: 750px;
     &__inner {
       padding: 0;
     }
@@ -138,6 +139,11 @@
       .phone__wrapper {
         &::after {
           height: 100%;
+          background: linear-gradient(
+            0deg,
+            #ffb341 -10.87%,
+            rgba(254, 218, 70, 0) 51.88%
+          );
         }
       }
     }
@@ -186,7 +192,7 @@
       display: none;
     }
     &__inner {
-      padding: 37px 0 95px 0;
+      padding: 37px 0 40px 0;
     }
     &__title {
       font-size: 24px;
@@ -197,6 +203,7 @@
     }
     .registration-how {
       background-position-y: 2%;
+      margin-top: 25px;
     }
     .body-how {
       .top-how {
@@ -212,30 +219,11 @@
             width: 230px;
             height: auto;
             padding: 11.4px 14.3px 10px 14.3px;
+            top: calc(50% - 211px);
             left: calc(50% - 115px);
             .phone-popup__image {
               margin-top: 11px;
             }
-          }
-        }
-        [data-popup-3] {
-          .top-how__phone-popup {
-            top: 42%;
-          }
-        }
-        [data-popup-4] {
-          .top-how__phone-popup {
-            top: 52%;
-          }
-        }
-        [data-popup-5] {
-          .top-how__phone-popup {
-            top: 59%;
-          }
-        }
-        [data-popup-6] {
-          .top-how__phone-popup {
-            top: 66%;
           }
         }
         .phone__title {
@@ -252,14 +240,9 @@
           margin-top: 25px;
         }
       }
- 
+
       .bottom-how {
         margin-top: 25px;
-        [data-popup-7] {
-          .top-how__phone-popup {
-            top: 76%;
-          }
-        }
       }
     }
   }
@@ -388,7 +371,7 @@
     &__item {
       max-width: 100%;
     }
-    &__logo{
+    &__logo {
       width: 100%;
     }
   }
@@ -421,7 +404,7 @@
     }
   }
 }
-@media screen and (max-width: 860px){
+@media screen and (max-width: 860px) {
   .header {
     &__inner {
       // position: fixed;
