--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -367,6 +367,9 @@
   }
 }
 @media screen and (max-width: 500px) {
+  .header {
+    height: 700px;
+  }
   .partners {
     &__item {
       max-width: 100%;
