--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1309,6 +1309,10 @@ a {
   }
 }
 @media screen and (max-width: 500px) {
+  .header {
+    height: 700px;
+  }
+
   .partners__item {
     max-width: 100%;
   }
