refactoring dark theme

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1320,7 +1320,7 @@ a {
     width: 100%;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 375px) {
   .header .phone-header {
     padding: 0 15px;
   }
@@ -1407,7 +1407,7 @@ a {
     display: none;
   }
 }
-@media screen and (min-width: 861px) and (max-width: 960px) and (prefers-color-scheme: dark) {
+@media screen and (min-width: 861px) and (prefers-color-scheme: dark) and (max-width: 960px) {
   .header__phone {
     margin-top: 10%;
   }
@@ -1428,6 +1428,7 @@ a {
   .header {
     border-radius: 0%;
     background: linear-gradient(180deg, #ffb341 -41.15%, #fdc643 16.04%, #fbd745 67.51%), #fbd745 !important;
+    height: 750px;
   }
   .header__inner {
     padding: 0;
@@ -1522,6 +1523,7 @@ a {
   }
   .header .phone-header .phone__wrapper::after {
     height: 100%;
+    background: linear-gradient(0deg, #ffb341 -10.87%, rgba(254, 218, 70, 0) 51.88%);
   }
   .header .appstore__image {
     background: url("../../images/header/appstore-mobile.png") no-repeat center center/cover;
@@ -1564,7 +1566,7 @@ a {
     display: none;
   }
   .how__inner {
-    padding: 37px 0 95px 0;
+    padding: 37px 0 40px 0;
   }
   .how__title {
     font-size: 24px;
@@ -1575,6 +1577,7 @@ a {
   }
   .how .registration-how {
     background-position-y: 2%;
+    margin-top: 25px;
   }
   .how .body-how .top-how {
     flex-direction: column;
@@ -1591,22 +1594,11 @@ a {
     width: 230px;
     height: auto;
     padding: 11.4px 14.3px 10px 14.3px;
+    top: calc(50% - 211px);
     left: calc(50% - 115px);
   }
   .how .body-how .top-how__phone-popup .phone-popup__image {
     margin-top: 11px;
-  }
-  .how .body-how .top-how [data-popup-3] .top-how__phone-popup {
-    top: 42%;
-  }
-  .how .body-how .top-how [data-popup-4] .top-how__phone-popup {
-    top: 52%;
-  }
-  .how .body-how .top-how [data-popup-5] .top-how__phone-popup {
-    top: 59%;
-  }
-  .how .body-how .top-how [data-popup-6] .top-how__phone-popup {
-    top: 66%;
   }
   .how .body-how .top-how .phone__title {
     margin-top: 6px;
@@ -1619,9 +1611,6 @@ a {
   .how .body-how .top-how__buy, .how .body-how .top-how__sell {
     min-height: auto;
     margin-top: 25px;
-  }
-  .how .body-how [data-popup-7] .top-how__phone-popup {
-    top: 76%;
   }
   .how .body-how .bottom-how {
     margin-top: 25px;
@@ -1740,6 +1729,10 @@ a {
   }
 }
 @media screen and (max-width: 500px) and (prefers-color-scheme: dark) {
+  .header {
+    height: 700px;
+  }
+
   .partners__item {
     max-width: 100%;
   }
@@ -1747,7 +1740,7 @@ a {
     width: 100%;
   }
 }
-@media screen and (max-width: 320px) and (prefers-color-scheme: dark) {
+@media screen and (max-width: 375px) and (prefers-color-scheme: dark) {
   .header .phone-header {
     padding: 0 15px;
   }
